# ChangeLog for gentoo/src/catalyst 
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.198.2.4 2005/04/09 15:52:20 wolf31o2 Exp $

  09 Apr 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/runscript-support/gamecdfs-update.sh:
  Updated to create a /var/db entry for xorg-x11, required for opengl-update.
  Also make PORTAGE_TMPDIR=/tmp for opengl-update.

  09 Apr 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/runscript-support/pre-kmerge.sh:
  Forcing genkernel to install with proper USE flags, rather than relying on
  us to have the right one in livecd-stage1.

  08 Apr 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  examples/gamecd.conf.example, livecd/runscript-support/livecdfs-update.sh:
  Updated livecdfs-update.sh to work properly with hotplug firmwares and also
  updated gamecd.conf.example, since the ut2004demo shell script has been
  renamed to ut2004-demo.

  06 Apr 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/runscript-support/gamecdfs-update.sh,
  livecd/runscript-support/livecdfs-update.sh,
  livecd/runscript/default-runscript.sh:
  Fixed gamecdfs-update and gamecd.conf to not error.

  30 Mar 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/runscript-support/livecdfs-update.sh:
  Added /usr/portage as tmpfs (this will be made conditional later).

  29 Mar 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  +livecd/files/livecd-bash_profile, livecd/runscript/default-runscript.sh:
  Added a new livecd-bash_profile that sources ~/.bashrc in case we're called
  from an interactive shell.

  29 Mar 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  -livecd/files/livecd-bash_profile, +livecd/files/livecd-bashrc,
  livecd/files/livecd-local.start, -livecd/files/mkvardb,
  livecd/runscript-support/pre-kmerge.sh,
  livecd/runscript/default-runscript.sh:
  Moved livecd-bash_profile to livecd-bashrc. Added check for