@@ -1,6 +1,10 @@
 # ChangeLog for gentoo/src/catalyst 
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.198.2.4 2005/04/09 15:52:20 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.198.2.5 2005/04/14 00:32:14 wolf31o2 Exp $
+
+  14 Apr 2005; Chris Gianelloni <wolf31o2@gentoo.org>
+  livecd/runscript-support/gamecdfs-update.sh:
+  Fixing broken /var/db link and removing bad alsa module.
 
   09 Apr 2005; Chris Gianelloni <wolf31o2@gentoo.org>
   livecd/runscript-support/gamecdfs-update.sh:
